tests/errors/unterminated_string.drast
// # TEST: unterminated string literal is rejected
// # EXPECT: error
// # ERROR_CONTAINS: unterminated string literal

main, int
	text = 'unterminated
	return 0
